Fix issue with slider mark spacing

--- a/Survey/source/styles/_o-question-hnumberslider.scss
+++ b/Survey/source/styles/_o-question-hnumberslider.scss
@@ -67,7 +67,7 @@
     width: 100%;
     height: 24px;
     border: 1px solid globals.$borders;
-    border-radius: 24px;
+    border-radius: 10px;
     top: 12px;
     background: white;
 }
