--- a/Survey/styles/base.css
+++ b/Survey/styles/base.css
@@ -1508,7 +1508,7 @@ select::-ms-expand {
   width: 100%;
   height: 24px;
   border: 1px solid #8797C8;
-  border-radius: 24px;
+  border-radius: 10px;
   top: 12px;
   background: white;
 }
